add list elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -14,12 +14,18 @@
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor asperiores odio doloribus temporibus assumenda
         reprehenderit, magni ipsum! Iure, eligendi! Consequuntur officia repudiandae maiores fuga possimus iste magnam
         nulla? Maxime, illo?
-         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rem autem mollitia suscipit
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rem autem mollitia suscipit
         voluptates pariatur
         recusandae similique, expedita optio, alias, impedit cupiditate exercitationem. Consectetur, nemo facilis.
         Sapiente nulla voluptatem minus.</p>
 </body>
 <p>Here are some things am going to learn about coding </p>
+<ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>javascript</li>
+    <li> And alot more</li>
+</ol>
 <ol>
     <li>HTML</li>
     <li>CSS</li>
