Add mew changes

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -18,6 +18,10 @@
         voluptates pariatur
         recusandae similique, expedita optio, alias, impedit cupiditate exercitationem. Consectetur, nemo facilis.
         Sapiente nulla voluptatem minus.</p>
+
+        <p>Check out <a href="https://www.khanacademy.org/"> Khan Academy</a> Its a great place to learn web development</p>
+        <p>Here is a link to my <a href="my-favourite-things.html">my favourite things</a>.</p>
+    
 </body>
 <p>Here are some things am going to learn about coding </p>
 <ol>
@@ -32,5 +36,6 @@
     <li>javascript</li>
     <li> And alot more</li>
 </ol>
+ <img src="images/elephant.jpg" alt="A photo of an elephant ">
 
 </html>
