--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <p>Hello world</p>
-    <p>welcome to my first webpage</p>
+    <p> <strong>Hello world</strong> </p>
+    <p>welcome to my first <em>webpage</em> </p>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor asperiores odio doloribus temporibus assumenda
         reprehenderit, magni ipsum! Iure, eligendi! Consequuntur officia repudiandae maiores fuga possimus iste magnam
         nulla? Maxime, illo?
