change name of my-first-webpage.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first webpage</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
+    <h1>WEB development</h1>
+    <h2>Moringa School</h2>
     <p> <strong>Hello world</strong> </p>
     <p>welcome to my first <em>webpage</em> </p>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor asperiores odio doloribus temporibus assumenda
@@ -19,9 +22,9 @@
         recusandae similique, expedita optio, alias, impedit cupiditate exercitationem. Consectetur, nemo facilis.
         Sapiente nulla voluptatem minus.</p>
 
-        <p>Check out <a href="https://www.khanacademy.org/"> Khan Academy</a> Its a great place to learn web development</p>
-        <p>Here is a link to my <a href="my-favourite-things.html">my favourite things</a>.</p>
-    
+    <p>Check out <a href="https://www.khanacademy.org/"> Khan Academy</a> Its a great place to learn web development</p>
+    <p>Here is a link to my <a href="my-favourite-things.html">my favourite things</a>.</p>
+
 </body>
 <p>Here are some things am going to learn about coding </p>
 <ol>
@@ -36,6 +39,6 @@
     <li>javascript</li>
     <li> And alot more</li>
 </ol>
- <img src="images/elephant.jpg" alt="A photo of an elephant ">
+<img src="images/elephant.jpg" alt="A photo of an elephant ">
 
 </html>
